<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:background="@color/backgroundColor"
              android:gravity="center"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/share_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_sharewithfriends_fragment"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/friends"/>

        <RelativeLayout
            android:id="@+id/share_with_friends"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/oval">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/share_with_friends"
                android:textColor="#212121"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/share_friends_tv"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:foregroundGravity="center"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/_15"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView24"
                android:layout_toRightOf="@+id/textView24"
                android:padding="4dp"
                android:src="@drawable/ic_stars_black_24dp"
                android:tint="@color/colorAccent"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>