<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroundColor"
                android:fitsSystemWindows="true">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/relativeLayout_TehnicalSupport"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/sup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RelativeLayout
            android:id="@+id/you_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView9"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:padding="12dp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="@+id/imageView9"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/you_name_tehnical_sup"
                android:textColor="@color/textColorLabel"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/name_sup_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textView26"
                android:layout_weight="1"
                android:paddingLeft="6dp"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/you_name_layout"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/you_name_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/you_name_layout">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/msg_"
                android:padding="12dp"
                android:textColorHint="@color/textColorHint"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/backgroundColor"
                android:ems="10"
                android:hint="@string/you_massege"
                android:inputType="textMultiLine"
                android:maxLines="7"
                android:padding="12dp"
                android:textColor="@color/textColorLabel"
                android:textColorHint="@color/textColorHint"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp"/>

        </LinearLayout>
</LinearLayout>
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent"
            android:foregroundGravity="bottom"
            android:gravity="center">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@color/backgroundColor"/>
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>
